--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lru-cache": "^10.2.0",
+    "merge-refs": "^1.3.0",
     "react": "^18.2.0",
     "react-activation": "^0.12.4",
     "react-app-alias": "^2.2.2",
